name:                reactive-tomato
version:             0.1.0.0
synopsis:            Distributed reactive programming with pipes.
description:         Distributed reactive programming with pipes.
homepage:            https://github.com/tz70s/reactive-tomato#readme
license:             MIT
license-file:        LICENSE
author:              Tzu-Chiao Yeh
maintainer:          su3g4284zo6y7@gmail.com
copyright:           Tzu-Chiao Yeh (c) 2019
category:            Reactive Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Reactive.Tomato
                     , Reactive.Tomato.Async
                     , Reactive.Tomato.Remote
  other-modules:       Reactive.Tomato.Signal
                     , Reactive.Tomato.EVar
                     , Reactive.Tomato.Time
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-concurrency
                     , mtl
                     , transformers
                     , stm
                     , bytestring
                     , hedis
                     , serialise

test-suite reactive-tomato-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  other-modules:       Reactive.Tomato.Signal.Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit
                     , mtl
                     , reactive-tomato
                     , pipes
  ghc-options:         -Wall -threaded