name:                reactive-tomato
version:             0.1.0.0
synopsis:            Distributed reactive programming.
description:         Distributed reactive programming.
homepage:            https://github.com/tz70s/reactive-tomato#readme
license:             MIT
license-file:        LICENSE
author:              Tzu-Chiao Yeh
maintainer:          su3g4284zo6y7@gmail.com
copyright:           Tzu-Chiao Yeh (c) 2019
category:            Reactive Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Reactive.Tomato
                     , Reactive.Tomato.Remote
                     , Reactive.Tomato.Time
                     
  other-modules:       Reactive.Tomato.Event
                     , Reactive.Tomato.Signal
                     , Reactive.Tomato.EVar
                     , Reactive.Tomato.BVar
                     
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-concurrency
                     , mtl
                     , transformers
                     , stm
                     , bytestring
                     , hedis
                     , serialise
                     , containers
                     , async

test-suite reactive-tomato-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  other-modules:       Reactive.Tomato.Event.Tests
                     , Reactive.Tomato.Signal.Tests
                     , Reactive.Tomato.EVar.Tests
                     , Reactive.Tomato.Time.Tests
                     , Reactive.Tomato.Remote.Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck
                     , mtl
                     , reactive-tomato
                     , pipes
                     , async
  ghc-options:         -Wall

executable benchmark-event
  hs-source-dirs:      benchmark/event
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reactive-tomato
                     , criterion
  ghc-options:         -O2 -threaded -rtsopts

executable benchmark-signal
  hs-source-dirs:      benchmark/signal
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reactive-tomato
                     , criterion
  ghc-options:         -O2 -threaded -rtsopts

executable benchmark-remote
  hs-source-dirs:      benchmark/remote
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reactive-tomato
                     , criterion
  ghc-options:         -O2 -threaded -rtsopts

executable benchmark-evar
  hs-source-dirs:      benchmark/evar
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reactive-tomato
                     , criterion
                     , async
  ghc-options:         -O2 -threaded -rtsopts