name:                tomato-colocation
version:             0.1.0.0
synopsis:            Example program based on reactive-tomato.
description:         Example program based on reactive-tomato.
homepage:            https://github.com/tz70s/reactive-tomato#readme
author:              Tzu-Chiao Yeh
maintainer:          su3g4284zo6y7@gmail.com
copyright:           Tzu-Chiao Yeh (c) 2019
category:            Reactive Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Tomato.Colocation
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-concurrency
                     , mtl
                     , text
                     , bytestring
                     , aeson
                     , containers

executable tomato-colocation
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-concurrency
                     , pipes-aeson
                     , text
                     , bytestring
                     , aeson
                     , websockets
                     , mtl
                     , stm
                     , reactive-tomato
                     , tomato-colocation

test-suite tomato-colocation-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  other-modules:       Tomato.Colocation.Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , containers
                     , tomato-colocation
  ghc-options:         -Wall -threaded