name:                tomato-colocation
version:             0.1.0.0
synopsis:            Example program based on reactive-tomato.
description:         Example program based on reactive-tomato.
homepage:            https://github.com/tz70s/reactive-tomato#readme
author:              Tzu-Chiao Yeh
maintainer:          su3g4284zo6y7@gmail.com
copyright:           Tzu-Chiao Yeh (c) 2019
category:            Reactive Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Tomato.Colocation
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , containers

executable colocation-native
  hs-source-dirs:      native
  main-is:             Main.hs
  other-modules:       Tomato.Colocation.Native.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , websockets
                     , mtl
                     , stm
                     , tomato-colocation
  ghc-options:         -O2 -threaded -rtsopts

executable colocation-reactive
  hs-source-dirs:      reactive
  main-is:             Main.hs
  other-modules:       Tomato.Colocation.Reactive.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , aeson
                     , containers
                     , websockets
                     , reactive-tomato
                     , tomato-colocation
                     , mtl
  ghc-options:         -O2 -threaded -rtsopts

test-suite tomato-colocation-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  other-modules:       Tomato.Colocation.Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , containers
                     , tomato-colocation
  ghc-options:         -Wall -threaded

executable colocation-e2e-tests
  hs-source-dirs:      e2e
  main-is:             TestSuite.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , tasty
                     , tasty-hunit
                     , containers
                     , tomato-colocation
                     , websockets
                     , aeson
                     , async
  ghc-options:         -Wall -threaded